--- a/InstaGuard/pom.xml
+++ b/InstaGuard/pom.xml
@@ -11,6 +11,11 @@
   		<artifactId>core</artifactId>
   		<version>2.1.0</version>
 	</dependency>
+	<dependency>
+        <groupId>com.twilio.sdk</groupId>
+        <artifactId>twilio</artifactId>
+        <version>(7.0,7.9)</version>
+    </dependency>
   </dependencies>
   
   <build>
